# Camera_tracking

./: .gitmodules  CMakeLists.txt  README.md  references.md  simple_capture.c
config/: camera0.txt  camera1.txt  camera2.fmt  camera2.txt  camera3.txt  room_light.fmt
config/camera_homographies/: camera1_to_ground_plane.txt  camera2_to_ground_plane.txt  camera3_to_ground_plane.txt  camera4_to_ground_plane.txt  image_size.txt
config/camera_intrinsics_1024x1024/: camera_0.json  camera_1.json  camera_2.json  camera_3.json
config/camera_intrisics_2048x2048/: camera_0.json  camera_1.json  camera_2.json  camera_3.json
config/cell_association/: camera2.txt
config/models/: README.md
config/tools/: points_generator.py
config/video_config/: high_speed_red_light.fmt  red_light_with_binning.fmt
imageCapture_and_stitching/src/: image_stitching.cpp  simple_capture.cpp
include/: backGroundSubtraction.hpp  deeplabFrameInference.hpp  objectTracking.hpp  simple_capture.hpp  utility_functions.hpp  video_recorder.hpp
more_READMEs/: config_files.md  deepalbcut.md  how_to_setup_xclib_and_xcap.md
objectTracking/: CMakeLists.txt  deeplabCutImageInference.py  deeplabFrameInference.py  objectTracking.cpp
python_embedding/: CMakeLists.txt  deeplabFrameInference.py  inference.py  pythontest.py  test.cpp  testImage.cpp
src/: backGroundSubtraction.cpp  calibrate_camera_homographies.cpp  cameraCalibration.py  deeplabFrameInference.cpp  deeplabFrameInference.py  deeplabcut_sample_usuage.cpp  file_read.cpp  image_stitching.cpp  image_stitching_main.cpp  lens_correction_test.cpp  main.cpp  objectTracking.cpp  record_samples.cpp  record_samples_main.cpp  sequence_capture.cpp  simple_capture.cpp  utility_functions.cpp
tools/: arucoMarkerDetection.cpp  cameraCalibration.py  chauroco_markers.py
web_backups/: PIXCI_Manual.html  README.md  portfolio_project_post.html
web_backups/daily_medium_blog_post/: README.md
